2008-08-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXFont.c (SetFontFeatures):	Disable antialiasing of
						 	fixed-width fonts with
						 	size <= 10.

2008-08-18  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * tests/canvWind.test: Update to tcltest2
    * tests/menubut.test:
    * tests/raise.test:
    * tests/unixButton.test:
    * tests/unixEmbed.test:
    * tests/winClipboard.test:

2008-08-17  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * tests/focus.test: Update to tcltest2
    * tests/focusTcl.test:
    * tests/geometry.test:
    * tests/grab.test:
    * tests/grid.test:
    * tests/imgBmap.test:
    * tests/imgPhoto.test:
    * tests/imgPPM.test:
    * tests/listbox.test:
    * tests/safe.test:
    * tests/tk.test:
    * tests/util.test:

2008-08-15  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * tests/clrpick.test: Update to tcltest2
    * tests/frame.test:
    * tests/font.test:
    * tests/image.test:

2008-08-14  Ania Pawelczyk  <aniap@users.sourceforge.net>

    * test/event.test: Update to tcltest2
    * test/id.test:
    * test/menu.test:

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to
					libX11.so et al.

	* unix/configure: 		autoconf-2.59

2008-08-12  Ania Pawelczyk  <aniap@users.sourceforge.net>

	* test/choosedir.test: Update to tcltest2
	* test/clipboard.test:
	* test/embed.test:
	* test/main.test:

2008-08-12  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.6a2
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.6a2 release.

2008-08-11  Ania Pawelczyk  <aniap@users.sourceforge.net>

	* test/canvImg.test: Update to tcltest2
	* test/canvRect.test:
	* test/canvText.test:
	* test/obj.test:

2008-08-07  Ania Pawelczyk  <aniap@users.sourceforge.net>
