@@ -1,3 +1,12 @@
+2008-08-19  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/ttk/ttkScroll.c:  Don't use sprintf "%g" to
+	format floating point numbers in -[xy]scrollcommand callbacks
+	or [xy]view methods.  Minor incompatibility: 0 and 1 now
+	formatted as "0.0" resp "1.0".
+	* tests/ttk/entry.test, tests/ttk/treeview.test: Updated
+	to account for above change.
+
 2008-08-19  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXFont.c (SetFontFeatures):	Disable antialiasing of
